fix: 로그인 기능 수정
- AuthController 추가: /api/auth/login, /api/auth/refresh, /api/auth/logout
- JwtTokenProvider에 generateRefreshToken 메서드 추가
- SecurityConfig: /api/auth/** permitAll, CORS allowedOriginPatterns("*")로 변경
- authService.js: ITSM(8082) 직접 호출 → 그룹웨어 백엔드(/api) 통해 처리

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>